--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "name": "littletiers",
   "version": "1.0.0",
   "description": "little tiers",
+  "engines": {
+    "node": "14.x"
+  },
   "main": "http_server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "npm install",
+    "start": "node http_server.js"
   },
   "repository": {
     "type": "git",
